[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/hud_heartEmpty.png" type="Texture" id=1]
[ext_resource path="res://GUI/hud_heartFull.png" type="Texture" id=2]
[ext_resource path="res://GUI/LifeBar.gd" type="Script" id=3]

[node name="LifeBar" type="Node2D"]
script = ExtResource( 3 )

[node name="HeartEmpty3" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="HeartFull3" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="HeartEmpty1" type="Sprite" parent="."]
position = Vector2( 120, 0 )
texture = ExtResource( 1 )

[node name="HeartFull1" type="Sprite" parent="."]
position = Vector2( 120, 0 )
texture = ExtResource( 2 )

[node name="HeartEmpty2" type="Sprite" parent="."]
position = Vector2( 60, 0 )
texture = ExtResource( 1 )

[node name="HeartFull2" type="Sprite" parent="."]
position = Vector2( 60, 0 )
texture = ExtResource( 2 )
